== 1.0.9 / 2010-03-22
* Fixed a nagging bug in activerecord reporter where it would crash if a step had status nil.
== 1.0.8 / 2009-11-13
* ActiveRecordReporter now accepts all activerecord adapter parameters - you can now connect to DBs other than sqlite3
* Reporter delegation now more robust (rutemax will exit gracefully and log if one reporter bombs)
* The old db connection code was removed. Explicit dependencies to adapters are also absent - you have to now have the appropriate gems for the ActiveRecordReporter to work properly
== 1.0.7 / 2009-09-11
* Steps now include the commandline (if there) in their name - makes the logs more readable
* Added a check for nil states to ensure reporters always get valid data
* activerecord dependency is now 2.3.4
== 1.0.6 / 2009-09-04
* The run context is now passed to the runner and subsequently to the TestStep#run method
	This way you can pass informaton to the command being run (context contains information on the start time of the run, the spec filename as well as any information added in the configuration) 
* Minor bugfix in the activerecord reporter to avoid crashes due to nil runner states
* The runner adds the current scenario name to the context passed
== 1.0.5 / 2009-07-16
* Updated gem dependencies to use activerecord 2.3.2
* A failure of the check test now passes all test stati (as not_executed). This will not skew statistics that show the trends on test numbers
* Setup and teardown are no longer executed for check tests
* fixed bug in element_prompt where a negative answer would not set an error
* TextReporter now shows the failed tests first, followed by tests with warnings, not executed tests and finally the successes. This gives a better overview of the important bits
* removed require "rubygems" from library code
== 1.0.4 / 2008-11-7
* Added functionality that allows ignoring the result of a step. The step is considered always successful
== 1.0.3 / 2008-10-28